# SpotItML

./: .gitignore  CLAUDE.md  README.md  pubspec.yaml  run_all_tests.sh  spotitml-memory-bank.md
.github/: copilot-instructions.md  memory-bank.md
android/app/: build.gradle.kts
android/app/src/main/kotlin/com/sebkraemer/spotitml/spotitml/: MainActivity.kt
cpp/: CMakeLists.txt  conanfile.txt  run_tests.sh
cpp/include/: ffi_bridge.h
cpp/include/ml/: onnx_runner.h
cpp/include/utils/: logger.h
cpp/src/: ffi_bridge.cpp
cpp/src/ml/: onnx_runner.cpp
cpp/src/utils/: logger.cpp
cpp/tests/: CMakeLists.txt  test_utils.h
cpp/tests/ml/: onnx_runner_test.cpp
doc/: PRD.md  dev-snippets.md
docs/: project-requirements.md
ios/Runner.xcodeproj/: project.pbxproj
lib/: camera_detection_widget.dart  ffi_test_widget.dart  main.dart  spotitml_ffi.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: CMakeLists.txt
native/cmake/: FindONNXRuntime.cmake
native/include/: spotitml_native.h
native/src/: spotitml_native.cpp
scripts/: build_macos.sh  deploy_native_libs.sh
spotitml/: .gitignore  pubspec.yaml
spotitml/android/app/: build.gradle.kts
spotitml/android/app/src/main/: AndroidManifest.xml
spotitml/android/app/src/main/kotlin/com/sebkraemer/spotitml/: MainActivity.kt
spotitml/ios/Runner/: Info.plist
spotitml/ios/Runner.xcodeproj/: project.pbxproj
spotitml/lib/: main.dart
spotitml/lib/core/ffi/: system_bridge.dart
spotitml/lib/data/datasources/: camera_service.dart
spotitml/lib/data/repositories/: system_repository_impl.dart
spotitml/lib/domain/entities/: system_status.dart
spotitml/lib/domain/repositories/: system_repository.dart
spotitml/lib/domain/usecases/: get_system_status.dart
spotitml/lib/presentation/screens/: camera_screen.dart  system_status_screen.dart
spotitml/lib/presentation/viewmodels/: camera_view_model.dart  system_status_view_model.dart
spotitml/test/: test_setup.dart  widget_test.dart
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
